# deep-research-agent

./: .env.example  .gitignore  CONTRIBUTING.md  DOCUMENTATION_SUMMARY.md  LICENSE  QUICKSTART.md  README.md  pyproject.toml  requirements.txt
research/: README.md  madrs.py  prompts.py  state.py  tools.py
research/agent/: __init__.py
